# beaesthetic-analytics

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yaml
deploy/: configmap.yaml  deployment.yaml  external-secrets.yaml  route.yaml  service.yaml
src/analytics/: __init__.py  cache.py  config.py  log_config.py  logging.py  main.py  middleware.py  models.py
src/analytics/metrics/: __init__.py  appointments.py  base.py  services.py
src/analytics/repositories/: __init__.py  agenda.py  customers.py
src/analytics/routers/: __init__.py  analytics.py  health.py  insights.py
src/analytics/services/: __init__.py  analytics.py  insights.py
